small changes to fix overlap determination

--- a/vite/timeflower/style.css
+++ b/vite/timeflower/style.css
@@ -19,7 +19,7 @@ body {
   border-style:solid;
   border-width: 1px;
   border-color: black;
-  background-color: beige;
+  background:linear-gradient(to bottom, beige, white,beige);;
 }
 
 .trackItemHeading {
@@ -49,6 +49,7 @@ body {
 .timeSeriesTrackItemLayout {
   display: flex;
   overflow: hidden;
+ 
 
 }
 
@@ -62,7 +63,8 @@ body {
 }
 
 .timeSeriesItemSvg {
-  background: beige;
+  
+
 }
 
 .flowerTimelineContainer {
@@ -73,8 +75,9 @@ body {
 }
 
 .flowerTrackHeadingContainer {
+  background:linear-gradient(to bottom, beige, bisque,beige);;
+  left: -600px;
   
-  background-color:beige;
   width: 100%;
   height: 100%;
 
@@ -85,7 +88,7 @@ body {
 
 .rowStripe {
   
-  background: linear-gradient(to bottom, bisque, white);
+  background: linear-gradient(to bottom, bisque, beige,bisque);
 
 
 }
@@ -156,13 +159,18 @@ body {
 }
 
 .flowerGridLeft {
-  width: 10vw;
+  width: 300px;
+  min-width:300px;
+  max-width: 300px;
   background-color: grey;
 
 }
 
 .flowerGridRight {
-  width: 10vw;
+  width: 300px;
+  min-width:300px;
+  max-width: 300px;
+
   background-color: grey;
   resize: both;
 
